feat: add placeholder style on error variant

--- a/libs/input/src/lib/input/input.component.scss
+++ b/libs/input/src/lib/input/input.component.scss
@@ -53,6 +53,10 @@ $tuuing-error-text: $tuuing-error-label;
       &:focus {
         outline-color: $tuuing-error-details;
       }
+
+      &::placeholder {
+        color: $tuuing-error-text;
+      }
     }
   }
 
