feat: add button type property

--- a/libs/button/src/lib/button/button.component.html
+++ b/libs/button/src/lib/button/button.component.html
@@ -1,5 +1,6 @@
 <button
   class="tuuing-button__field tuuing-button__field--{{variant}}"
-  [disabled]="disabled">
+  [disabled]="disabled"
+  [type]="type">
     <ng-content></ng-content>
 </button>
